[tool.poetry]
name = "2-homework-crypto"
version = "0.1.0"
description = ""
authors = ["ggjiuw <herezoom1231@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
